[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actr"
version = "0.1.0"
description = "Adaptive Calibration Triggered Reasoning — dynamically selects reasoning strategies based on confidence signals."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Corbin Zhang", email = "corbin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
actr = "actr.cli:main"

[project.urls]
Homepage = "https://github.com/clawson1717/adaptive-calibration-triggered-reasoning"
Repository = "https://github.com/clawson1717/adaptive-calibration-triggered-reasoning"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
